--- a/index.html
+++ b/index.html
@@ -131,38 +131,57 @@
             <div class="col-md-4 pr-2">
               <div class="list-group text-center my-3">
                 <div class="list-group-item text-white bg-dark">
-                  <h4 class="text-center my-1">Basic</h4>
+                  <h4 class="text-center my-1">Consultation&nbsp;</h4>
                 </div>
                 <div class="list-group-item text-uppercase font-weight-bold"> Free </div>
-                <a href="#" class="list-group-item"> 100 GB HDD Storage </a> <a href="#" class="list-group-item"> Web Server </a> <a href="#" class="list-group-item"> DNS Hosting </a> <a href="#" class="list-group-item"> Mail Server </a>
+                <a href="#" class="list-group-item">Telephhone Consultation&nbsp; &nbsp; </a>
+				<a href="#" class="list-group-item">This Web Site&nbsp; </a>
+			<!--	  
+				<a href="#"     class="list-group-item"> DNS Hosting </a>
+				<a href="#" class="list-group-item"> Mail Server</a>
                 <div class="list-group-item">
                   <button class="btn btn-success btn-lg btn-block text-truncate">Sign-up</button>
                 </div>
+-->		  
               </div>
             </div>
             <div class="col-md-4">
               <div class="list-group text-center">
                 <div class="list-group-item text-white bg-dark">
-                  <h4 class="text-center my-1">Standard<br>
+                  <h4 class="text-center my-1">Hourly<br>
                   </h4>
                 </div>
-                <div class="list-group-item text-uppercase font-weight-bold"> $99/mo. </div>
-                <a href="#" class="list-group-item"> 1 TB HDD Storage </a> <a href="#" class="list-group-item"> Database Option </a> <a href="#" class="list-group-item"> Web Server </a> <a href="#" class="list-group-item"> DNS Hosting </a> <a href="#" class="list-group-item"> Mail Server </a> <a href="#" class="list-group-item"> 24/7 Monitoring </a>
+                <div class="list-group-item text-uppercase font-weight-bold"> $120/hr. </div>
+                <a href="#" class="list-group-item"> Telephone Audit </a>
+				<a href="#" class="list-group-item"> Video Conference Team Members </a>
+				<a href="#" class="list-group-item"> Written recomendations</a>
+				<a href="#" class="list-group-item"> Linux technical assistance</a>
+				<a href="#" class="list-group-item"> This Web Site</a>
+<!--				  
+				<a href="#" class="list-group-item"> Mail Server </a>
+				<a href="#" class="list-group-item"> 24/7 Monitoring </a>
                 <div class="list-group-item">
                   <button class="btn btn-success btn-lg btn-block text-truncate">Buy Now</button>
                 </div>
+-->		  
               </div>
             </div>
             <div class="col-md-4 pl-2">
               <div class="list-group text-center my-3">
                 <div class="list-group-item text-white bg-dark">
-                  <h4 class="text-center my-1">Managed</h4>
+                  <h4 class="text-center my-1">On-Site Audit</h4>
                 </div>
-                <div class="list-group-item text-uppercase font-weight-bold"> Contact Us </div>
-                <a href="#" class="list-group-item"> Upto 10 TB HDD Storage </a> <a href="#" class="list-group-item"> Consultation </a> <a href="#" class="list-group-item"> Custom Servers </a> <a href="#" class="list-group-item"> 24/7 Support </a>
+                <div class="list-group-item text-uppercase font-weight-bold"> $10,000 </div>
+                <a href="#" class="list-group-item"> Two weeks on-site </a>
+				<a href="#" class="list-group-item"> On-site audit</a>
+				<a href="#" class="list-group-item"> Written recomendations</a>
+				<a href="#" class="list-group-item"> Linux technical assistance</a>
+				<a href="#" class="list-group-item"> This Web Site (including private areas)</a>
+<!--				  
                 <div class="list-group-item">
                   <button class="btn btn-success btn-lg btn-block text-truncate">Contact Us</button>
                 </div>
+-->				  
               </div>
             </div>
           </div>
@@ -178,8 +197,8 @@
       <h2>Contact Us</h2>
       <address>
       <strong>RedFire Consultants.</strong><br>
-      We are based in New England. Available,<br>
-      worldwide via the Internet.<br>
+      We are based in New England. Available 24x7,<br>
+      and worldwide via the Internet.<br>
 		  <br>
 	  We'd love to get in touch with you. Just<br>
 	  email us at <a href="mailto:RedFireConsultants#gmail.com">RedFireConsultants@gmail.com</a>
@@ -212,9 +231,10 @@
       </ul>
     </div>
     <div class="col-lg-4 col-12">
-      <h2>About Us</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, voluptates, soluta velit nostrum ut iste exercitationem vitae ipsum repellendus laudantium ab possimus nemo odio cumque illum nulla laborum blanditiis unde.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, voluptates, soluta velit nostrum ut iste exercitationem vitae ipsum repellendus laudantium ab possimus nemo odio cumque illum nulla laborum blanditiis unde.</p>
+      <h2>About Our Founder</h2>
+      <p>Over the last forty-five years, I've consulted as a software engineer on a number of troubled Embedded Linux software engineering projects. I've beem successful because I've brought skills in Organizational Development, Paramedicine, and Enginering. This unique perspective brings results.</p>
+		<p>Now, I'd like to bring this unique perspective to bear for you.</p>
+      <p>I have a Masters in Business Administration ( M.B.A.), a Bachelor of Science (B.S.) in Engineering Physics, and for about fifteen years, was a licensed EMT/Paramedic.</p>
     </div>
   </div>
 </div>
