complete most of banner page

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
       <li class="nav-item active"> <a class="nav-link" href="/cases">CaseStudies</a> </li>
-		
+	<!--	
       <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a> </div>
       </li>
+-->		
     </ul>
 <!--	  
     <form class="form-inline my-2 my-lg-0">
@@ -46,41 +47,44 @@
           </div>
         </div>
 -->		  
-        <p class="text-center">If so, we can get it back on track.</p>
-        <img src="images/home-jumbotron.jpg" width="1200" height="400" alt="" class="img-fluid"> </div>
+        <p class="text-center"><strong>If so, we can get it back on track</strong>.</p>
+        <img src="images/home-jumbotron.jpg" width="1200" height="200" alt="" class="img-fluid"> </div>
     </div>
   </div>
 </div>
 <div class="container">
-  <div class="row">
-    <div class="text-center col-md-6 col-12">
+<div class="row">
+    <div class="text-center col-md-6 col-12 col-xl-12">
+      <h3>How do we do it?</h3>
+      <p>We bring four critical skills to bear on your project. They work in synegery to produce results, and are discussed briefly below.</p>
+     <!-- <a class="btn btn-danger btn-lg" href="#" role="button">Tutorials</a> </div> -->
+<!--
+		<div class="text-center col-md-6 col-12">
       <h3>Lorem ipsum</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, magnam?</p>
-      <a class="btn btn-danger btn-lg" href="#" role="button">Tutorials</a> </div>
-    <div class="text-center col-md-6 col-12">
-      <h3>Lorem ipsum</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, magnam?</p>
-      <a class="btn btn-info btn-lg" href="#" role="button">Documentation</a> </div>
+      <a class="btn btn-info btn-lg" href="#" role="button">Documentation</a>
+	</div>
+-->		
   </div>
 </div>
 <hr>
 <div class="container">
   <div class="row">
     <div class="col-lg-3 col-md-6 col-12">
-      <h2>Lorem ipsum</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis accusamus praesentium eveniet ad unde doloremque ex officia eius ab quibusdam.</p>
+      <h2>(Medical) Diagnosis&nbsp;</h2>
+      <p>We use the process part of clinical medicine. We gather your '<strong>chief complaint</strong>, signs, symptons, then conduct an exam. This is followd by a diagnosis, and then a prescription.. Lastly, treatement follows.&nbsp;</p>
     </div>
     <div class="col-lg-3 col-md-6 col-12">
-      <h2>Lorem ipsum</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, mollitia natus amet eligendi consequuntur. Veritatis ullam debitis voluptas repellat laboriosam.</p>
+      <h2>(M.B.A.)&nbsp; Business Skills&nbsp;</h2>
+      <p>Engineering must exist within a business environment., and we have the scope to <strong>back-out</strong> and have a look. Customer relations, costing, schedules amd project management are all exampined.&nbsp; &nbsp; &nbsp;&nbsp;</p>
     </div>
     <div class="col-lg-3 col-md-6 col-12">
-      <h2> Lorem ipsum</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, error, itaque non vel architecto ratione obcaecati doloribus delectus illum harum?</p>
+      <h2> B.S. Engineering Physics&nbsp;</h2>
+      <p>This allows us to take a <strong>top-level</strong> look at your engineering from an engineers perspective.&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
     </div>
     <div class="col-lg-3 col-md-6 col-12">
-      <h2>Lorem ipsum</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, nam voluptate accusantium nulla distinctio odit aliquam voluptatem ab. Earum.</p>
+      <h2>Experience&nbsp;</h2>
+      <p>Lastly, our founder has over <strong>forty-five years</strong> of embedded Linux software engineering <strong>experince</strong>.&nbsp; &nbsp;&nbsp;</p>
     </div>
   </div>
 </div>
@@ -99,7 +103,7 @@
   </div>
 </section>
 -->
-	
+<!--	
 <div class="container mt-4">
   <div class="row">
     <div class="col-sm-6">
@@ -120,6 +124,7 @@
     </div>
   </div>
 </div>
+-->	
 <div class="container">
   <div class="row">
     <div class="container py-sm-4">
@@ -213,6 +218,7 @@
       </div>
 	-->	
     </div>
+	  <!--
     <div class="col-lg-4 col-md-6 col-12">
       <h2>Testimonials</h2>
       <ul class="list-unstyled">
@@ -230,7 +236,8 @@
         </li>
       </ul>
     </div>
-    <div class="col-lg-4 col-12">
+	 --> 
+    <div class="col-lg-4 col-12 col-xl-8">
       <h2>About Our Founder</h2>
       <p>Over the last forty-five years, I've consulted as a software engineer on a number of troubled Embedded Linux software engineering projects. I've beem successful because I've brought skills in Organizational Development, Paramedicine, and Enginering. This unique perspective brings results.</p>
 		<p>Now, I'd like to bring this unique perspective to bear for you.</p>
