--- a/casestudies/case-studies.html
+++ b/casestudies/case-studies.html
@@ -1,78 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>template</title>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>template</title>
 
-    <!-- Bootstrap -->
-    <link href="../css/bootstrap-4.4.1.css" rel="stylesheet">
-  </head>
-	
-  <body>
-  
+<!-- Bootstrap -->
+<link href="../css/main.125b5-formatted.css" rel="stylesheet">
+<link href="../css/bootstrap-4.4.1.css" rel="stylesheet">
+<style type="text/css">
+.mid-grey {
+}
+</style>
+</head>
+
+<body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> <a class="navbar-brand" href="#" style="color: red">RedFire</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
+      <li class="nav-item active"> <a class="nav-link" href="/index.html">Home</a> </li>
       <li class="nav-item active"> <a class="nav-link" href="/casestudies/case-studies.html">CaseStudies</a> </li>
     </ul>
   </div>
 </nav>
 
-	  <!-- Place Page Contents Here -->
+<!-- Place Page Contents Here -->
 <div class="container mt-2">
   <div class="row">
     <div class="col-12">
       <div class="jumbotron">
-        <h1 class="text-center">Case Studies&nbsp;</h1>
-        <p class="text-center"><strong>Here are a number of case studies that discuss troubled software.<br>
-			projects, their analysis, and what can be done.</strong></p>
-       
+        <h1 class="text-center f2 f1-2 b di lh-title mb3 white mw6 bg-primary">Case Studies&nbsp;</h1>
+		  <br> <br>
+        <p class="text-center f3-m">
+        Here are a number of case studies that discuss troubled software.<br>
+        projects, their analysis, and what can be done.
+        </p>
+      </div>
     </div>
   </div>
 </div>
-
-	
-<div class="container-fluid">
-  <div class="row justify-content-xl-center">
-    <div class="w-50-ns ph1-ns flex"> <a href="/casestudies/jamaica-blue/" class="no-underline pa3 bg-grey-1 br1 mb2 db raise w-100">
+<div class="mw7 center">
+  <ul class="flex-ns flex-wrap mhn1-ns pa3">
+    <div class="w-50-ns ph1-ns flex"> <a href="/post/rearchitect/" class="no-underline pa3 bg-grey-1 br1 mb2 db raise w-100">
+      <h2 class="f3 b lh-title mb1 primary">The Case where Re-Architecture saves the day.</h2>
+      <p class="mid-gray lh-title mb2">Thu, Jan 20, 2022</p>
+      <p class="mb0">In this case, I had to re-architect the design and then re-implement to get it done.</p>
+      <p class="link b dib black mb0">Read more →</p>
+      </a> </div>
+    <div class="w-50-ns ph1-ns flex"> <a href="/post/jamaica-blue/" class="no-underline pa3 bg-grey-1 br1 mb2 db raise w-100">
       <h2 class="f3 b lh-title mb1 primary">The Case of the Missing Architect.</h2>
-      <p class="mid-gray lh-title mb2">Sat, Jan 02, 2022</p>
+      <p class="mid-gray lh-title mb2">Thu, Jan 20, 2022</p>
       <p class="mb0">In this case, we visit a sub-contractor working on an interface to a telephone switch for a much larger client.</p>
       <p class="link b dib black mb0">Read more →</p>
-      </a> </div>	  
-  </div>
-	
-  <div class="row justify-content-xl-center">
-    <div class="w-50-ns ph1-ns flex"> <a href="/casestudies/rearchitecture/" class="no-underline pa3 bg-grey-1 br1 mb2 db raise w-100">
-      <h2 class="f3 b lh-title mb1 primary">A case where re-architecture saves the day.</h2>
-      <p class="mid-gray lh-title mb2">Sun, Jan 03, 2022</p>
-      <p class="mb0">In this case, a subcontractor had used the wrong architecture and how we fixed it.</p>
-      <p class="link b dib black mb0">Read more →</p>
-      </a> </div>	  
-  </div>	
+      </a> </div>
+  </ul>
 </div>
-
-
-  <footer class="text-center">
+<footer class="text-center">
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <p>Copyright © RedFire Consultants. All rights reserved.</p>
+        <p class="center">Copyright © RedFire Consultants. All rights reserved.</p>
       </div>
     </div>
   </div>
 </footer>
-	  
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-    <script src="../js/jquery-3.4.1.min.js"></script>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
+<script src="../js/jquery-3.4.1.min.js"></script> 
 
-    <!-- Include all compiled plugins (below), or include individual files as needed --> 
-    <script src="../js/popper.min.js"></script>
-    <script src="../js/bootstrap-4.4.1.js"></script>
-  </body>
+<!-- Include all compiled plugins (below), or include individual files as needed --> 
+<script src="../js/popper.min.js"></script> 
+<script src="../js/bootstrap-4.4.1.js"></script>
+</body>
 </html>
