add one blog entry

--- a/casestudies/case-studies.html
+++ b/casestudies/case-studies.html
@@ -49,7 +49,7 @@
       <p class="mb0">In this case, I had to re-architect the design and then re-implement to get it done.</p>
       <p class="link b dib black mb0">Read more →</p>
       </a> </div>
-    <div class="w-50-ns ph1-ns flex"> <a href="/post/jamaica-blue/" class="no-underline pa3 bg-grey-1 br1 mb2 db raise w-100">
+    <div class="w-50-ns ph1-ns flex"> <a href="/casestudies/the-missing-architect.html" class="no-underline pa3 bg-grey-1 br1 mb2 db raise w-100">
       <h2 class="f3 b lh-title mb1 primary">The Case of the Missing Architect.</h2>
       <p class="mid-gray lh-title mb2">Thu, Jan 20, 2022</p>
       <p class="mb0">In this case, we visit a sub-contractor working on an interface to a telephone switch for a much larger client.</p>
