--- a/template.html
+++ b/template.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>template</title>
 
-    <!-- Bootstrap -->
+    <link href="../css/main.125b5-formatted.css" rel="stylesheet">
+	<!-- Bootstrap -->
     <link href="../css/bootstrap-4.4.1.css" rel="stylesheet">
   </head>
 	
   <body>
   
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark"> <a class="navbar-brand" href="#" style="color: red">RedFire</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark"> <a class="navbar-brand" href="/" style="color: red">RedFire</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
