add case study whyrunninglate.html

--- a/casestudies/case-studies.html
+++ b/casestudies/case-studies.html
@@ -26,7 +26,6 @@
   </div>
 </nav>
 
-<!-- Place Page Contents Here -->
 <div class="container mt-2">
   <div class="row">
     <div class="col-12">
@@ -55,8 +54,18 @@
       <p class="mb0">In this case, we visit a sub-contractor working on an interface to a telephone switch for a much larger client.</p>
       <p class="link b dib black mb0">Read more →</p>
       </a> </div>
+	  
+	  <div class="w-50-ns ph1-ns flex"> <a href="/casestudies/whyrunninglate.html" class="no-underline pa3 bg-grey-1 br1 mb2 db raise w-100">
+      <h2 class="f3 b lh-title mb1 primary">The Case of Poor Client Relations.</h2>
+      <p class="mid-gray lh-title mb2">Sun, Jan 30, 2022</p>
+      <p class="mb0">In this case, the vendor-customer relationship had to change.</p>
+      <p class="link b dib black mb0">Read more →</p>
+      </a> </div>
+	  
+<!-- Place Page Contents Here --> 
   </ul>
 </div>
+	
 <footer class="text-center">
   <div class="container">
     <div class="row">
