--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
+      <li class="nav-item active"> <a class="nav-link" href="#">Home</a> </li>
       <li class="nav-item active"> <a class="nav-link" href="/casestudies/case-studies.html">CaseStudies</a> </li>
 	<!--	
       <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
@@ -56,7 +56,7 @@
 <div class="row">
     <div class="text-center col-md-6 col-12 col-xl-12">
       <h3>How do we do it?</h3>
-      <p>We bring four critical skills to bear on your project. They work in synegery to produce results, and are discussed briefly below.</p>
+      <p>We bring four critical skills to bear on your project. They work in synegery to produce results, and are discussed briefly below. A number of <a href="/casestudies">case studies</a> are also presented to help illustrate this methodology.</p>
      <!-- <a class="btn btn-danger btn-lg" href="#" role="button">Tutorials</a> </div> -->
 <!--
 		<div class="text-center col-md-6 col-12">
@@ -75,11 +75,11 @@
       <p>We use the process part of clinical medicine. We gather your '<strong>chief complaint</strong>, signs, symptons, then conduct an exam. This is followd by a diagnosis, and then a prescription.. Lastly, treatement follows.&nbsp;</p>
     </div>
     <div class="col-lg-3 col-md-6 col-12">
-      <h2>(M.B.A.)&nbsp; Business Skills&nbsp;</h2>
+      <h2>M.B.A.&nbsp; Business Skills&nbsp;</h2>
       <p>Engineering must exist within a business environment., and we have the scope to <strong>back-out</strong> and have a look. Customer relations, costing, schedules amd project management are all exampined.&nbsp; &nbsp; &nbsp;&nbsp;</p>
     </div>
     <div class="col-lg-3 col-md-6 col-12">
-      <h2> B.S. Engineering Physics&nbsp;</h2>
+      <h2> B.S. Engineering Physics/CompSci&nbsp;</h2>
       <p>This allows us to take a <strong>top-level</strong> look at your engineering from an engineers perspective.&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
     </div>
     <div class="col-lg-3 col-md-6 col-12">
