--- a/casestudies/the-missing-architect.html
+++ b/casestudies/the-missing-architect.html
@@ -23,7 +23,7 @@
 </nav>
 
 <!-- Place Page Contents Here -->
-<div class="mw6 center ph3 pv4">
+<div class="container mw6 center ph3 pv4">
   <h1 class="f2 lh-title b mb3">The Case of the Missing Architect.</h1>
   <div class="flex justify-between grey-3">
     <p>Mon, Jan 03, 2022</p>
@@ -40,14 +40,14 @@
     <p>From time to time, the entire development system would stop working, often for days. We&rsquo;d sit around wondering what to do.</p>
     <p>Eventually, prime caught up with this issue and demanded a fix. The sub went out and ordered an entirely new development to fix the problem and this appeared to appease the prime, at least for a bit.</p>
     <blockquote>
-      <p>Red Alert. Was this the issue?</p>
+      <p style="color: tomato">Red Alert. Was this the issue?</p>
     </blockquote>
     <p>I had always done my own system administration, and it was simple for me to correct any issues, such as NFS mounting individual machines on a server. Voilà, we now had a functioning development environment.</p>
     <h2 id="back-to-the-main-issue">Back to the main issue</h2>
     <p>Ok, I&rsquo;ve got to build a screen to display data. What should it look like? I went to the architect and asked for a specification or for that matter, any document, or perhaps his time, to explain what was to be built.</p>
     <p>What I found was a burned-out architect. He was under so much stress from management, he could barely speak in coherent sentences. Was there a spec? No. What was I to do? He directed me to some sales literature that had been previously put out that showed happy users smiling at a terminal screen in the background. &ldquo;Code to this&rdquo;, he says.</p>
     <blockquote>
-      <p>Red Alert: Was the architect doing his job?</p>
+      <p style="color: tomato">Red Alert: Was the architect doing his job?</p>
     </blockquote>
     <h2 id="i-try-to-help">I try to help</h2>
     <p>I went to management and tried to offer some advice.
@@ -55,7 +55,7 @@
       2. The architect needed to provide critical guidance</p>
     <p>For my troubles I was canned on the spot. How dare, I, a mere software engineer offer this kind of advice?</p>
     <blockquote>
-      <p>Red Alert: Was management in touch with the project?</p>
+      <p style="color: tomato">Red Alert: Was management in touch with the project?</p>
     </blockquote>
     <h2 id="more-to-the-story">More to the story</h2>
     <p>About two weeks later, I was called back in. It seems the development system had shutdown again and no one know how to get it back up and running.</p>
@@ -70,7 +70,7 @@
     <p>Management should have had someone in IT to manage the development environment. They could have contracted for someone to come in as needed to keep costs low. Having a whole ten person team idled for days is unacceptable.</p>
     <p>They desperately needed some basic project management. Agile-lite, whereby you have two week sprints, would have been a good idea. Meeting daily for fifteen minutes would keep management up-to-speed as well as provide guidance to the engineering staff. The two week sprint milestones would have alerted management to schedule slips at an early stage.</p>
     <blockquote>
-      <p>Question: How does a project get one year behind? One day at a time!</p>
+      <p style="color: tomato">Question: How does a project get one year behind? One day at a time!</p>
     </blockquote>
     <h2 id="a-little-bit-about-telecom-work-culture">A little bit about telecom work culture</h2>
     <p>I&rsquo;ve worked in Bell Labs and baby bells and they are extremely autocratic and heretical. Orders come from the top down and must not be questioned.</p>
