--- a/casestudies/case-studies.html
+++ b/casestudies/case-studies.html
@@ -62,7 +62,8 @@
       <p class="link b dib black mb0">Read more →</p>
       </a> </div>
 	  
-<!-- Place Page Contents Here --> 
+<!-- Place Page Contents Before Here --> 
+
   </ul>
 </div>
 	
