--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--
+  <base href="https://www.redfireconsultants.org">
+  -->
+  <base href="http://calpage.sytes.net">
+  
   <title>DreamweaverBootstrap</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
+
+  <!--
+  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
+  -->
+  
   </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> <a class="navbar-brand" href="#" style="color: red">RedFire</a>
