get autoedit working

--- a/casestudies/case-studies.html
+++ b/casestudies/case-studies.html
@@ -42,7 +42,7 @@
 </div>
 <div class="mw7 center">
   <ul class="flex-ns flex-wrap mhn1-ns pa3">
-    <div class="w-50-ns ph1-ns flex"> <a href="/post/rearchitect/" class="no-underline pa3 bg-grey-1 br1 mb2 db raise w-100">
+    <div class="w-50-ns ph1-ns flex"> <a href="/casestudies/rearchitect.html" class="no-underline pa3 bg-grey-1 br1 mb2 db raise w-100">
       <h2 class="f3 b lh-title mb1 primary">The Case where Re-Architecture saves the day.</h2>
       <p class="mid-gray lh-title mb2">Thu, Jan 20, 2022</p>
       <p class="mb0">In this case, I had to re-architect the design and then re-implement to get it done.</p>
@@ -62,7 +62,14 @@
       <p class="link b dib black mb0">Read more →</p>
       </a> </div>
 	  
-<!-- Place Page Contents Before Here --> 
+<div class="w-50-ns ph1-ns flex"> <a href="/casestudies/helloworld.html" class="no-underline pa3 bg-grey-1 br1 mb2 db raise w-100">
+  <h2 class="f3 b lh-title mb1 primary">We say hello to the world.</h2>
+  <p class="mid-gray lh-title mb2">022-01-30T06:32:00.000Z</p>
+  <p class="mb0">  In this case, we say hello to the world.</p>
+  <p class="link b dib black mb0">Read more →</p>
+</a> </div>
+
+<!-- Place Page Contents Before Here -->
 
   </ul>
 </div>
