try deploying on netlify

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <!--
   <base href="https://www.redfireconsultants.org">
   -->
-  <base href="http://calpage.sytes.net">
+  <!--
+  <base href="http://calpage.sytes.net>"
+  -->
+  <base href="https://cocky-swirles-9d63eb.netlify.app">
   
   <title>DreamweaverBootstrap</title>
 
