modify banner text

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <div class="container">
 <div class="row">
     <div class="text-center col-md-6 col-12 col-xl-12">
-      <h3>How do we do it?</h3>
+      <h3>How we do it</h3>
       <p>We bring four critical skills to bear on your project. They work in synegery to produce results, and are discussed briefly below. A number of <a href="/casestudies">case studies</a> are also presented to help illustrate this methodology.</p>
      <!-- <a class="btn btn-danger btn-lg" href="#" role="button">Tutorials</a> </div> -->
 <!--
