add creative-destruction case study

--- a/casestudies/case-studies.html
+++ b/casestudies/case-studies.html
@@ -69,6 +69,13 @@
   <p class="link b dib black mb0">Read more →</p>
 </a> </div>
 
+<div class="w-50-ns ph1-ns flex"> <a href="/casestudies/creative-destruction.html" class="no-underline pa3 bg-grey-1 br1 mb2 db raise w-100">
+  <h2 class="f3 b lh-title mb1 primary">The Company Would Not Innovate.</h2>
+  <p class="mid-gray lh-title mb2">022-02-03T09:00:00.000Z</p>
+  <p class="mb0">  In this case, we visit two companies that refused to innovate.</p>
+  <p class="link b dib black mb0">Read more →</p>
+</a> </div>
+
 <!-- Place Page Contents Before Here -->
 
   </ul>
