add competent-engineer casestudies and c tests

--- a/casestudies/case-studies.html
+++ b/casestudies/case-studies.html
@@ -76,6 +76,13 @@
   <p class="link b dib black mb0">Read more →</p>
 </a> </div>
 
+<div class="w-50-ns ph1-ns flex"> <a href="/casestudies/competent-engineer.html" class="no-underline pa3 bg-grey-1 br1 mb2 db raise w-100">
+  <h2 class="f3 b lh-title mb1 primary">Hire Competent Engineers.</h2>
+  <p class="mid-gray lh-title mb2">022-02-04T08:13:00.000Z</p>
+  <p class="mb0">  We present a 'C' test you can use to hire competent engineering staff.</p>
+  <p class="link b dib black mb0">Read more →</p>
+</a> </div>
+
 <!-- Place Page Contents Before Here -->
 
   </ul>
