add more beefy <hr>

--- a/casestudies/competent-engineer.html
+++ b/casestudies/competent-engineer.html
@@ -311,6 +311,7 @@ int main()
     </div>
   </div>
 
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
 <footer class="text-center">
 <div class="container">
