--- a/casestudies/creative-destruction.html
+++ b/casestudies/creative-destruction.html
@@ -107,6 +107,7 @@ The division should not be bound by the quarterly constraints to the shareholder
     </div>
   </div>
 
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
 <footer class="text-center">
 <div class="container">
