--- a/casestudies/rearchitect.html
+++ b/casestudies/rearchitect.html
@@ -122,6 +122,7 @@ This sort of thing drives me crazy. I hate watching arrogant incompetent contrac
     </div>
   </div>
 
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
 <footer class="text-center">
 <div class="container">
