--- a/casestudies/helloworld.html
+++ b/casestudies/helloworld.html
@@ -42,6 +42,7 @@
     </div>
   </div>
 
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
 <footer class="text-center">
 <div class="container">
