--- a/casestudies/the-missing-architect.html
+++ b/casestudies/the-missing-architect.html
@@ -79,6 +79,8 @@
   </div>
 </div>
 <hr>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+
 <footer class="text-center">
   <div class="container">
     <div class="row">
