--- a/casestudies/whyrunninglate.html
+++ b/casestudies/whyrunninglate.html
@@ -75,6 +75,8 @@
     <p>And as karma would have it, the company, in the end, went out of business.</p>
   </div>
 </div>
+
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <footer class="text-center">
   <div class="container">
     <div class="row">
