--- a/template.html
+++ b/template.html
@@ -24,7 +24,8 @@
 </nav>
 
 	  <!-- Place Page Contents Here -->
-	  
+
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
   <footer class="text-center">
   <div class="container">
     <div class="row">
