--- a/index.html
+++ b/index.html
@@ -220,7 +220,21 @@
 		  <br>
 	  We'd love to get in touch with you. Just<br>
 	  email us at <a href="mailto:RedFireConsultants#gmail.com">RedFireConsultants@gmail.com</a>
+		  or drop us a line.
       </address>
+		<div> <hr>
+		<form name="contact" method="POST" netlify data-netlify-recaptcha="true">
+  <div class="form-group">
+    
+    <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter your email">
+    <input type="comment" class="form-control" id="exampleInputComment" aria-describedby="commentHelp" placeholder="Enter your comment">
+  </div>
+			
+	<div data-netlify-recaptcha="true"></div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+
+		</div>
 <!--		
       <h4>Social</h4>
       <div class="row">
