email address is required on submit

--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@
 		<form name="contact" method="POST" netlify data-netlify-recaptcha="true">
   <div class="form-group">
     
-    <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter your email">
+    <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter your email" required>
     <input type="comment" class="form-control" id="exampleInputComment" aria-describedby="commentHelp" placeholder="Enter your comment">
   </div>
 			
-	<div data-netlify-recaptcha="true"></div>
+  <div data-netlify-recaptcha="true"></div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
