tell story of psychic energy

--- a/casestudies/case-studies.html
+++ b/casestudies/case-studies.html
@@ -77,6 +77,13 @@
   <p class="link b dib black mb0">Read more →</p>
 </a> </div>
 
+<div class="w-50-ns ph1-ns flex"> <a href="/casestudies/psychic-energy.html" class="no-underline pa3 bg-grey-1 br1 mb2 db raise w-100">
+  <h2 class="f3 b lh-title mb1 primary">Psychic Energy Helps Find a Problem</h2>
+  <p class="mid-gray lh-title mb2">022-02-04T14:10:00.000Z</p>
+  <p class="mb0">  Psychic energy is used to help identify a problem.</p>
+  <p class="link b dib black mb0">Read more →</p>
+</a> </div>
+
 <!-- Place Page Contents Before Here -->
 
   </ul>
