--- a/casestudies/case-studies.html
+++ b/casestudies/case-studies.html
@@ -84,6 +84,13 @@
   <p class="link b dib black mb0">Read more →</p>
 </a> </div>
 
+<div class="w-50-ns ph1-ns flex"> <a href="/casestudies/high-noworkers.html" class="no-underline pa3 bg-grey-1 br1 mb2 db raise w-100">
+  <h2 class="f3 b lh-title mb1 primary">No Workers?</h2>
+  <p class="mid-gray lh-title mb2">022-02-05T10:45:00.000Z</p>
+  <p class="mb0">  No workers? A Sr. Labor Economist Ron Hetrick takes a look from ten thousand feet.</p>
+  <p class="link b dib black mb0">Read more →</p>
+</a> </div>
+
 <!-- Place Page Contents Before Here -->
 
   </ul>
