discuss labor practices

--- a/casestudies/case-studies.html
+++ b/casestudies/case-studies.html
@@ -91,6 +91,13 @@
   <p class="link b dib black mb0">Read more →</p>
 </a> </div>
 
+<div class="w-50-ns ph1-ns flex"> <a href="/casestudies/low-noworkers.html" class="no-underline pa3 bg-grey-1 br1 mb2 db raise w-100">
+  <h2 class="f3 b lh-title mb1 primary">How labor policies manifest themselves.</h2>
+  <p class="mid-gray lh-title mb2">022-02-05T14:00:00.000Z</p>
+  <p class="mb0"> Corporate labor policies have changed over time and continue to change. This note documents two major and opposite policies. Bad labor practices are discussed.</p>
+  <p class="link b dib black mb0">Read more →</p>
+</a> </div>
+
 <!-- Place Page Contents Before Here -->
 
   </ul>
