fix more spelling errors

--- a/index.html
+++ b/index.html
@@ -86,19 +86,27 @@
   <div class="row">
     <div class="col-lg-3 col-md-6 col-12">
       <h2>(Medical) Diagnosis&nbsp;</h2>
-      <p>We use the process part of clinical medicine. We gather your '<strong>chief complaint</strong>, signs, symptons, then conduct an exam. This is followd by a diagnosis, and then a prescription.. Lastly, treatement follows.&nbsp;</p>
+		
+		<p>We use the process part of clinical medicine. We gather your <strong>chief complaint</strong>, signs, symptoms, then conduct an exam. This is followed by a diagnosis, and then a prescription. Lastly, treatment follows.</p>
+		
     </div>
     <div class="col-lg-3 col-md-6 col-12">
       <h2>M.B.A.&nbsp; Business Skills&nbsp;</h2>
-      <p>Engineering must exist within a business environment., and we have the scope to <strong>back-out</strong> and have a look. Customer relations, costing, schedules amd project management are all exampined.&nbsp; &nbsp; &nbsp;&nbsp;</p>
+		
+		<p>Engineering must exist within a business environment., and we have the scope to <strong>back-out</strong> and have a look. Customer relations, costing, schedules and project management are all examined. </p>
+		
     </div>
     <div class="col-lg-3 col-md-6 col-12">
       <h2> B.S. Engineering Physics/CompSci&nbsp;</h2>
-      <p>This allows us to take a <strong>top-level</strong> look at your engineering from an engineers perspective.&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
+		
+		<p>This allows us to take a <strong>top-level</strong> look at your engineering from an engineer’s perspective.</p>
+		
     </div>
     <div class="col-lg-3 col-md-6 col-12">
       <h2>Experience&nbsp;</h2>
-      <p>Lastly, our founder has over <strong>forty-five years</strong> of embedded Linux software engineering <strong>experince</strong>.&nbsp; &nbsp;&nbsp;</p>
+		
+		<p>Lastly, our founder has over <strong>forty-five years</strong> of embedded Linux software engineering <strong>experience</strong>. </p>
+		
     </div>
   </div>
 </div>
